--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <h2>Name</h2>
         <p id="PlayernameOutput"></p>
     </div>
+    <div class="sketchfab-embed-wrapper"> <iframe title="Gun" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/0d2673573aac4171a119aeaca228b5bc/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/gun-0d2673573aac4171a119aeaca228b5bc?utm_medium=embed&utm_campaign=share-popup&utm_content=0d2673573aac4171a119aeaca228b5bc" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Gun </a> by <a href="https://sketchfab.com/oisin.odonovan2003?utm_medium=embed&utm_campaign=share-popup&utm_content=0d2673573aac4171a119aeaca228b5bc" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> oisin.odonovan2003 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=0d2673573aac4171a119aeaca228b5bc" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
     <script src="Code/code.js"></script>
 </body>
 </html>
